--- a/.github/workflows/CreateVM.yaml
+++ b/.github/workflows/CreateVM.yaml
@@ -26,7 +26,7 @@ jobs:
         SERVER_NAME: cicdVMbrio
         ADMIN_LOGIN: adminbrio
       run: >
-        powershell -command "& '${{ env.OUTPUT_PATH }}\IaC\AzCLI\vmcreation.ps1'" 
+        powershell -command "& '${{ env.OUTPUT_PATH }}\AzCLI\vmcreation.ps1'" 
         -servicePrincipal ${{ secrets.SERVICE_PRINCIPAL_APPID }}
         -servicePrincipalSecret ${{ secrets.SERVICE_PRINCIPAL_SECRET }} 
         -servicePrincipalTenantId ${{ secrets.SERVICE_PRINCIPAL_TENANTID }} 
